gcc/testsuite/gimple.dg/20120523-1.gimple
gimple_assign <modify_expr, a, 12.3>	/* { dg-error "Invalid RHS.*modify_expr" } */
